# xlm-ens

./: .commitlintrc.yml  CONTRIBUTING.md  README.md
.github/workflows/: branch-protection.yml  ci.yml  verify-deployment.yml
cli/: Cargo.toml
cli/src/: export.rs  main.rs
cli/src/commands/: auction.rs  history.rs  mod.rs  portfolio.rs  register.rs  renew.rs  renewal_check.rs  resolve.rs  reverse.rs  transfer.rs
cli/tests/: bulk_test.rs  e2e.rs  watch_test.rs
contracts/auction/src/: lib.rs
contracts/bridge/src/: lib.rs
contracts/nft/src/: lib.rs
contracts/registrar/src/: lib.rs  test.rs
contracts/registry/src/: errors.rs  lib.rs  test.rs
contracts/resolver/src/: lib.rs  test.rs
contracts/subdomain/src/: lib.rs  test.rs
contracts/subdomain/test_snapshots/test/tests/: add_and_remove_controller_emit_events.1.json  create_subdomain_emits_event.1.json  parent_controller_can_revoke.1.json  parent_owner_can_revoke.1.json  prevents_parent_takeover.1.json  register_parent_emits_event.1.json  rejects_duplicate_parent_registration.1.json  rejects_unauthorized_controller_addition.1.json  rejects_unauthorized_subdomain_creation.1.json  removes_controller_and_revokes_authority.1.json  revoke_emits_event.1.json  stores_subdomain_records_in_contract_storage.1.json  subdomain_owner_can_revoke.1.json  transfer_emits_event.1.json  transfers_subdomain_ownership_and_queries_existence.1.json  unauthorized_caller_cannot_revoke.1.json  version_is_exposed.1.json
scripts/: check-commit-message.sh  generate_python_sdk.py  track-contract-size.sh  validate_branch_protection.py  verify-deployment.sh
tests/: Cargo.toml  test_validate_branch_protection.py
tests/integration/: full_lifecycle_test.rs  nextest.toml
