[package]
name = "xlm-ns-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1.3"
futures = "0.3"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stellar_sdk = "0.1.4"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
indicatif = "0.17"
xlm-ns-auction = { path = "../contracts/auction" }
xlm-ns-common = { path = "../packages/xlm-ns-common", features = ["std"] }
xlm-ns-sdk = { path = "../packages/xlm-ns-sdk" }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
