[package]
name = "xlm-ns-integration-tests"
edition.workspace = true
license.workspace = true
version.workspace = true

[dev-dependencies]
soroban-sdk = { version = "=26.0.0-rc.1", features = ["testutils"] }
xlm-ns-registrar = { path = "../contracts/registrar" }
xlm-ns-registry  = { path = "../contracts/registry" }
xlm-ns-resolver  = { path = "../contracts/resolver" }
xlm-ns-subdomain = { path = "../contracts/subdomain" }
xlm-ns-auction   = { path = "../contracts/auction" }
xlm-ns-bridge    = { path = "../contracts/bridge" }
xlm-ns-nft       = { path = "../contracts/nft" }

[[test]]
name = "registrar_registry_test"
path = "integration/registrar_registry_test.rs"

[[test]]
name = "registrar_test"
path = "integration/registrar_test.rs"

[[test]]
name = "registry_test"
path = "integration/registry_test.rs"

[[test]]
name = "subdomain_test"
path = "integration/subdomain_test.rs"

[[test]]
name = "auction_test"
path = "integration/auction_test.rs"

[[test]]
name = "bridge_test"
path = "integration/bridge_test.rs"

[[test]]
name = "registry_errors_test"
path = "integration/registry_errors_test.rs"

[[test]]
name = "concurrent_registration_test"
path = "integration/concurrent_registration_test.rs"

[[test]]
name = "registry_nft_test"
path = "integration/registry_nft_test.rs"

[[test]]
name = "full_lifecycle_test"
path = "integration/full_lifecycle_test.rs"

# Storage / hot-path benchmarks. Marked `#[ignore]` in source so they do not
# run in default `cargo test`; invoke with:
#   cargo test --test storage_benchmarks -- --ignored --nocapture
# or `scripts/run-benchmarks.sh`.
[[test]]
name = "storage_benchmarks"
path = "benches/storage_benchmarks.rs"
